--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "FITdemo_3"]
 	path = FITdemo_3
 	url = https://github.com/Harsine07/FITdemo_3.git
+[submodule "subdir"]
+	path = subdir
+	url = ./subdir/
